Bug 745640 - [sk] Translate strings for variants of the upgrade dialog for 3.6 users
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104429 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/upgradedialog.lang
+++ b/sk/upgradedialog.lang
@@ -1,5 +1,5 @@
 ;Get the Newest Firefox
-Získajte najnovší Firefox
+Nainštalujte si najnovší Firefox
 
 
 ;The Newest Firefox is Here!
@@ -23,7 +23,7 @@ Lepší než kedykoľvek predtým
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Na svete je nová verzia Firefoxu, ktorá vás dokáže lepšie ochrániť proti útokom online.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,62 +31,62 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+Získate najvyššiu bezpečnosť
 
 
 ;experience faster performance
-získate vyšší výkon
+Získate vyšší výkon
 
 
 ;enjoy greater customization
-enjoy greater customization
+Užijete si lepšiu prispôsobiteľnosť
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Vaša verzia Firefoxu bude čoskoro náchylná na útoky online.
 
 
 ;Stay safe online
-budete online v bezpečí
+Budete online v bezpečí
 
 
 ;Enjoy new features
-užijete si nové funkcie
+Užijete si nové funkcie
 
 
 ;URGENT!
-POZOR!
+DÔLEŽITÉ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Vaša verzia Firefoxu už viac nie je chránená proti online útokom.
+Vaša verzia Firefoxu už viac nie je chránená proti útokom online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Toto je posledné upozornenie pred automatickou aktualizáciou na najnovšiu verziu.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox už viac nepodporuje verziu vášho operačného systému a bude náchylný na útoky online.
 
 
 ;We recommend:
-We recommend:
+Preto Vám odporúčame:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Aktualizovať svoj <a %s>operačný systém</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Nainštalovať si kompatibilný prehliadač
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Nainštalovať si aktualizáciu vášho <a %s>operačného systému</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Pred automatickou aktualizáciou Vás prehliadač ešte raz upozorní.
 
 
