[sk] update firefoxtesting.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104430 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/firefoxtesting.lang
+++ b/sk/firefoxtesting.lang
@@ -14,7 +14,7 @@ Nainštalujte a otestujte budúce verzie Firefoxu. Užite si najnovšie inováci
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
