--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -63,7 +63,7 @@ Vaša različica Firefoxa ni več zaščitena pred napadi na spletu.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-Še zadnji opomin, potem pa vam bomo brskalnik samodejno posodabljali na najnovejšo različico
+To je zadnji opomin, potem pa vam bomo brskalnik samodejno posodobili na najnovejšo različico
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
@@ -87,6 +87,5 @@ Namestite brezplačno nadgradnjo za svoj <a %s>operacijski sistem</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
-
+Še enkrat vas bomo opomnili, potem pa bomo brskalnik samodejno posodobili.
 
