l10n: ro, upgrade dialogs, translation by Alexandru Szasz
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104437 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ro/upgradedialog.lang
+++ b/ro/upgradedialog.lang
@@ -1,5 +1,5 @@
 ;Get the Newest Firefox
-Obține noul Firefox
+Ia-ți cel mai nou Firefox
 
 
 ;The Newest Firefox is Here!
@@ -11,7 +11,7 @@ Noul Firefox este aici!
 
 
 ;Fresh new look
-O nouă înfățișare refăcută
+Un aspect nou
 
 
 ;Much faster than Firefox 3.6
@@ -19,39 +19,39 @@ Mult mai rapid decât Firefox 3.6
 
 
 ;More awesomeness than ever
-Mai multe lucruri minunate
+Mai multe lucruri extraordinare
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Există o versiune mai nouă de Firefox care te poate proteja mai bine împotriva atacurilor online.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Faceți actualizarea</a> - este rapidă și gratuită!
+<a %s>Obține actualizarea</a> - rapid și gratuit!
 
 
 ;get the latest in security
-get the latest in security
+obține ultimele noutăți în materie de securitate
 
 
 ;experience faster performance
-obțineți performanțe mai bune
+obține performanță mai bună
 
 
 ;enjoy greater customization
-enjoy greater customization
+bucură-te de mai multă personalizare
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Versiunea ta de Firefox va fi în curând vulnerabilă atacurilor online.
 
 
 ;Stay safe online
-stați online în siguranță
+Rămâi în siguranță și când ești online
 
 
 ;Enjoy new features
-profitați de noile funcționalități
+Bucură-te de noile funcționalități
 
 
 ;URGENT!
@@ -59,34 +59,34 @@ URGENT!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Versiunea dumneavoastră de Firefox nu mai este protejată împotriva atacurilor online.
+Versiunea ta de Firefox nu mai este protejată împotriva atacurilor online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Acesta este ultimul mesaj de aducere aminte înainte de a se aplica automat actualizarea la ultima versiune
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox nu mai suportă sistemul tău de operare și va fi vulnerabil atacurilor online.
 
 
 ;We recommend:
-We recommend:
+Îți recomandăm:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+să-ți actualizezi <a %s>sistemul de operare</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+să descarci un navigator compatibil
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalarea unei actualizări gratuite <a %s>a sistemului tău de operare</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Nu vei mai fi avertizat, iar actualizarea va fi aplicată automat.
 
 
