Update lang files for nb-NO, fixes Bug 745628
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104440 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nb-NO/mobile.lang
+++ b/nb-NO/mobile.lang
@@ -26,7 +26,7 @@ Last ned fra iTunes - GRATIS
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home for <span>iPhone</span> {ok}
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
