--- a/nb-NO/snippets.lang
+++ b/nb-NO/snippets.lang
@@ -82,46 +82,46 @@ Last ned Firefox på ditt Android-nettbrett, og få verdensvevens kraft rett inn
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Last ned Firefox Beta</a>, gi tilbakemelding og hjelp til å gjøre Firefox enda bedre for våre 450 millioner brukere.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Test funksjoner, forbedre og finpuss dem, hjelp oss å gjøre vår neste versjon bedre enn noensinne. <a href="%">Last ned Firefox Beta i dag!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Elsker du Firefox? Vil du hjelpe til å gjøre den neste versjonen enda bedre? <a href="%">Last ned Firefox Beta</a> og gi din tilbakemelding i dag!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Bruker du den nyeste Firefox Beta? <a href="%">Last ned nå</a>, og hjelp oss teste de nyeste funksjonene.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Bruker du ikke den siste Firefox Beta? <a href="%">Last den ned i dag</a> og hold deg oppdatert på hva det jobbes med for vår neste versjon.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Vil du dele din tilbakemelding? <a href="%">Finn ut hvordan</a>, og hjelp oss å gjøre den neste versjonen av Firefox enda smidigere.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox Beta-brukere: Ikke glem å <a href="%">gi tilbakemelding</a> for å hjelpe oss legge siste hånd på den neste versjonen.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Hjelp oss å gjøre den neste versjonen av Firefox enda bedre. <a href="%">Bli medlem</a> og del Firefox Beta med vennene dine.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Introduser venner til kommende funksjoner i Firefox. <a href="%">Bli medlem</a> og del Firefox Aurora i dag.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Bruker du Firefox på flere datamaskiner? Nå kan du synkronisere utvidelser på tvers av alle. <a href="%">Finn ut hvordan aktivere Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rask, rask, rask. <a %s>Firefox for Android fikk nettopp en stor oppgradering</a>. Hjelp oss å spre ryktet.
 
 
