--- a/nb-NO/upgradedialog.lang
+++ b/nb-NO/upgradedialog.lang
@@ -43,7 +43,7 @@ ta i bruk nye tilpasningsmuligheter
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Din versjon av Firefox vil snart være sårbar for angrep på nettet.
+Versjonen din av Firefox vil snart være sårbar for angrep på nettet.
 
 
 ;Stay safe online
@@ -67,7 +67,7 @@ Dette er siste påminnelse før du vil automatisk bli oppgradert til den nyeste 
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox støtter ikke lenger din versjon av operativsystemet, og vil derfor være sårbar for angrep på nettet.
+Firefox støtter ikke lenger operativsystem-versjonen som du bruker, og vil derfor være sårbar for angrep på nettet.
 
 
 ;We recommend:
