Bug 745590 - [cs] Translate strings for variants of the upgrade dialog for 3.6 users' * czech translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104445 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cs/upgradedialog.lang
+++ b/cs/upgradedialog.lang
@@ -87,6 +87,6 @@ Nainstalovat si zdarma aktualizaci ke svému <a %s>operačnímu systému</a>.
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Před automatickou aktualizací budete ještě jednou dotázáni.
 
 
