--- a/cs/snippets.lang
+++ b/cs/snippets.lang
@@ -122,6 +122,6 @@ Používáte Firefox na více počítačích? Nyní máte možnost napříč nim
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rychlý, rychlý, rychlý. <a %s>Firefox pro Android byl právě výrazně vylepšen</a>. Dejte o tom vědět svému okolí.
 
 
