l10n: sr, updates upgrade dialogs, translation by Oskar Ivanić  sr
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104448 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sr/upgradedialog.lang
+++ b/sr/upgradedialog.lang
@@ -7,7 +7,7 @@
 
 
 ;<a %s>Quick, easy and free update</a>
-<a %s>Брза, лака и бесплатна доградња</a>
+<a %s>Брза, лака и бесплатна надоградња</a>
 
 
 ;Fresh new look
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Постоји нова верзија фајерфокса која Вас може боље заштити од напада на интернету.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,23 +31,20 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
-
+имајте последње мере безбедности
 
 ;experience faster performance
 искусите боље перформансе
 
 
 ;enjoy greater customization
-enjoy greater customization
-
+уживајте у већој могућности прилагођавања
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
-
+Ваша верзија фајерфокса ће ускоро бити рањива од напада на интернету.
 
 ;Stay safe online
-останите безбедни на интернету
+Останите безбедни на интернету
 
 
 ;Enjoy new features
@@ -63,30 +60,31 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Ово је последња опомена пре него што ћете бити аутоматски надограђени на последњу верзију.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Фајерфокс више не подржава Ваш оперативни систем и биће рањив од напада на интернету.
 
 
 ;We recommend:
-We recommend:
+Ми препоручујемо:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Надограђивање Вашег <a %s>оперативног система</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Преузимањем одговарајућег Интернет прегледача
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Инсталирањем бесплатне надоградње на Ваш <a %s>оперативни систем</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Бићете упитани још једном пре него што будете аутоматски надограђени.
+
 
 
