changes to upgrade an snippets lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104450 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -122,6 +122,6 @@ Invitá a tus amigos a probar las próximas funcionalidades de Firefoxs. <a href
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rápido, rápido, rápido. <a %s>Firefox para Android acaba de tener una gran actualización</a>. Ayudanos a difundirlo.
 
 
