--- a/es-AR/upgradedialog.lang
+++ b/es-AR/upgradedialog.lang
@@ -63,30 +63,30 @@ Tu versión de Firefox ya no está protegida contra ataques online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Este es el último recordatorio antes de que Firefox se actualice automáticamente a la última versión
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ya no es compatible con la versión de tu sistema operativo y podrá ser vulnerable a ataques online.
 
 
 ;We recommend:
-We recommend:
+Te recomendamos:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Actualizar tu <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Descargar un navegador compatible
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalar una actualización gratuita de tu <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Se te preguntará una vez más antes de que se actualice automáticamente.
 
 
