l10n: fi, updates upgrade dialogs, translation by Ville Pohjanheimo
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104451 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fi/upgradedialog.lang
+++ b/fi/upgradedialog.lang
@@ -1,5 +1,5 @@
 ;Get the Newest Firefox
-Lataa uusin versio
+Lataa uusin Firefox
 
 
 ;The Newest Firefox is Here!
@@ -23,7 +23,7 @@ Entistäkin mahtavampi
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Firefoxin uusi versio suojelee sinua entistä paremmin verkkohyökkäyksiltä.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+viimeisimmät turvallisuusominaisuudet
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ selaa nopeammin
 
 
 ;enjoy greater customization
-enjoy greater customization
+laajemmat mukauttamismahdollisuudet
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Käyttämäsi Firefoxin versio on pian alttiina verkkohyökkäyksille.
 
 
 ;Stay safe online
@@ -63,30 +63,31 @@ Käyttämäsi Firefox-versio ei enää suojaa verkkohyökkäyksiltä.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Tämä on viimeinen muistutus ennen kuin selaimesi automaattisesti päivitetään uusimpaan versioon
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ei enää tue käyttöjärjestelmäsi versiota ja on altis verkkohyökkäyksille.
 
 
 ;We recommend:
-We recommend:
+Suosittelemme, että:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Päivität tietokoneesi <a %s>käyttöjärjestelmän</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Lataat yhteensopivan selaimen
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Asennat ilmaisen päivityksen tietokoneesi <a %s>käyttöjärjestelmään</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Sinua muistutetaan vielä kerran ennen kuin selaimesi päivitetään automaattisesti.
+
 
 
