translation for bug 745652
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104457 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-CN/upgradedialog.lang
+++ b/zh-CN/upgradedialog.lang
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+现在有一个新版本的 Firefox 可以更好地保护你免受在线攻击的伤害。
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+安全地获取最新版本
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+享受更多定制能力
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+您使用的 Firefox 版本很快就会变得容易受到在线攻击。
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+这是自动更新到最新版本之前最后一次提示。
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox 将不再针对你的操作系统版本提供支持，这将会使得您的系统容易受到在线攻击。
 
 
 ;We recommend:
-We recommend:
+我们建议：
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+正在升级你的 <a %s>操作系统</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+正在下载一个兼容的浏览器
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+正在为您的 <a %s>操作系统</a> 安装一个免费的升级
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+自动更新之前您将还会收到提示。
 
 
