Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104458 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -122,6 +122,6 @@ Több számítógépen is használ Firefoxot? Mostantól szinkronizálhatja a ki
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Gyorsan, gyorsan, gyorsan. Most jött ki a <a %s>Firefox for Android legfrissebb verziója</a>. Segíts, hogy mindenki megtudja!
 
 
