l10n: use es-ES strings for es-CL and es-MX since those teams didn't update their files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104472 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-MX/upgradedialog.lang
+++ b/es-MX/upgradedialog.lang
@@ -1,9 +1,9 @@
 ;Get the Newest Firefox
-Obtén el nuevo Firefox
+Consigue el nuevo Firefox
 
 
 ;The Newest Firefox is Here!
-¡El Firefox más reciente está aquí!
+¡El nuevo Firefox está aquí!
 
 
 ;<a %s>Quick, easy and free update</a>
@@ -11,7 +11,7 @@ Obtén el nuevo Firefox
 
 
 ;Fresh new look
-Imagen renovada
+Nueva imagen renovada
 
 
 ;Much faster than Firefox 3.6
@@ -23,35 +23,35 @@ Más cosas alucinantes que nunca
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Hay una nueva versión de Firefox que puede protegerte mejor frente a los ataques informáticos.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Consigue la actualización</a> - ¡rápida y gratuitamente!
+<a %s>Actualiza tu Firefox</a>. ¡Es rápido y gratuito!
 
 
 ;get the latest in security
-get the latest in security
+consigue lo último en seguridad
 
 
 ;experience faster performance
-obtén un rendimiento mejorado
+experimenta un rendimiento más rápido
 
 
 ;enjoy greater customization
-enjoy greater customization
+disfruta de una mayor personalización
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Tu versión de Firefox pronto será vulnerable a ataques informáticos.
 
 
 ;Stay safe online
-permanece seguro en la red
+Mantén tu seguridad en Internet
 
 
 ;Enjoy new features
-disfruta de nuevas características
+Disfruta de nuevas características
 
 
 ;URGENT!
@@ -59,34 +59,34 @@ disfruta de nuevas características
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Tu versión de Firefox ya no te protege frente a ataques en la red.
+Tu versión de Firefox ya no te protege frente a ataques informáticos.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Este es el último recordatorio antes de que tu versión se actualice automáticamente
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ya no es compatible con la versión de tu sistema operativo, por lo que será vulnerable a ataques informáticos.
 
 
 ;We recommend:
-We recommend:
+Recomendamos:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Actualizar el <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Descargar un navegador compatible
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalar una actualización gratuita del <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Se mostrará otro aviso más antes de que la actualización se instale automáticamente.
 
 
