--- a/es-CL/upgradedialog.lang
+++ b/es-CL/upgradedialog.lang
@@ -1,9 +1,9 @@
 ;Get the Newest Firefox
-Obtén el último Firefox
+Consigue el nuevo Firefox
 
 
 ;The Newest Firefox is Here!
-¡El último Firefox ya está aquí!
+¡El nuevo Firefox está aquí!
 
 
 ;<a %s>Quick, easy and free update</a>
@@ -11,7 +11,7 @@ Obtén el último Firefox
 
 
 ;Fresh new look
-Nuevo e innovador diseño
+Nueva imagen renovada
 
 
 ;Much faster than Firefox 3.6
@@ -19,74 +19,74 @@ Mucho más rápido que Firefox 3.6
 
 
 ;More awesomeness than ever
-Mas genial que nunca
+Más cosas alucinantes que nunca
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Hay una nueva versión de Firefox que puede protegerte mejor frente a los ataques informáticos.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Consigue la actualización</a> - ¡es rápida y gratuita!
+<a %s>Actualiza tu Firefox</a>. ¡Es rápido y gratuito!
 
 
 ;get the latest in security
-get the latest in security
+consigue lo último en seguridad
 
 
 ;experience faster performance
-consigue un rendimiento mejorado
+experimenta un rendimiento más rápido
 
 
 ;enjoy greater customization
-enjoy greater customization
+disfruta de una mayor personalización
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Tu versión de Firefox pronto será vulnerable a ataques informáticos.
 
 
 ;Stay safe online
-permanece seguro en línea
+Mantén tu seguridad en Internet
 
 
 ;Enjoy new features
-disfruta las nuevas características
+Disfruta de nuevas características
 
 
 ;URGENT!
-¡Urgente!
+¡URGENTE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Tu versión de Firefox ya no está protegida contra ataques en línea.
+Tu versión de Firefox ya no te protege frente a ataques informáticos.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Este es el último recordatorio antes de que tu versión se actualice automáticamente
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ya no es compatible con la versión de tu sistema operativo, por lo que será vulnerable a ataques informáticos.
 
 
 ;We recommend:
-We recommend:
+Recomendamos:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Actualizar el <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Descargar un navegador compatible
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalar una actualización gratuita del <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Se mostrará otro aviso más antes de que la actualización se instale automáticamente.
 
 
