l10n: ar, 3.x upgrade dialog strings, translation by Linostar
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104477 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ar/upgradedialog.lang
+++ b/ar/upgradedialog.lang
@@ -1,4 +1,4 @@
-;Get the Newest Firefox
+﻿;Get the Newest Firefox
 احصل على أحدث فَيَرفُكس
 
 
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+هذه نسخة جديدة من فَيَرفُكس تساعد على حمايتك من هجمات الوب.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+احصل على أحدث نسخة تزيد الأمان
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+استمتع بتخصيص أروع
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+نسختك الحالية من فَيَرفُكس ستصبح غير محصنة قريبًا من هجمات الوب.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+هذا آخر تذكير لك قبل أن تُحدث نسختك تلقائيًا إلى آخر إصدار
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+فَيَرفُكس لم يعد يدعم إصدار نظام تشغيلك وسيصبح غير محميّ أمام هجمات الوب بسبب ذلك.
 
 
 ;We recommend:
-We recommend:
+ننصح أن:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+ترقّي <a %s>نظام التشغيل</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+تنزّل متصفحًا متوافقًا
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+تثبّت ترقية مجانية <a %s>لنظام التشغيل</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+ستحصل على تنبيه أخير قبل بدء عملية التحديث التلقائي.
 
 
