l10n: km, updated beta page string, translaiton by Vannak Eng
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104479 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/km/firefoxtesting.lang
+++ b/km/firefoxtesting.lang
@@ -38,7 +38,7 @@ Firefox Beta សម្រាប់​ទូរ័ស័ព្ទ
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+២. ធ្វើ​ឲ្យ​ប្រសើរ &amp; ដុសខាត់
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
