Translate missing Android snippet and FX36EOL message
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104482 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/snippets.lang
+++ b/lt/snippets.lang
@@ -122,6 +122,6 @@ Naudojatės „Firefox“ keliuose kompiuteriuose? Dabar galite tarp jų sinchro
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Sparti, labai sparti! <a %s>„Firefox“ naršyklė „Android“ įrenginiams ką tik žymiai atnaujinta.</a> Pasidalinkite šia naujiena su kitais.
 
 
