--- a/lt/upgradedialog.lang
+++ b/lt/upgradedialog.lang
@@ -87,6 +87,6 @@ Parsisiųsti ją palaikančią naršyklę
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Šis įspėjimas – priešpaskutinis prieš automatiškai atnaujinant Jūsų naudojamą „Firefox“ iki šviežiausios laidos.
 
 
