Tranlate. Fixes bug 745581.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104483 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/upgradedialog.lang
+++ b/af/upgradedialog.lang
@@ -23,35 +23,35 @@ Beter as ooit
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Daar’s 'n nuwe weergawe van Firefox wat beter beskerming bied teen aanvalle aanlyn.
 
 
-;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Kry die bywerking</a> - dit is vinnig en gratis!
+;Get the upgrade — it’s fast & free!
+Kry die bywerking - dis vinnig en gratis!
 
 
 ;get the latest in security
-get the latest in security
+kry die jongste in sekuriteit
 
 
 ;experience faster performance
-geniet beter werkverrigting
+ervaar beter werkverrigting
 
 
 ;enjoy greater customization
-enjoy greater customization
+geniet meer aanpasbaarheid
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+U weergawe van Firefox sal binnekort vatbaar raak vir aanvalle aanlyn.
 
 
 ;Stay safe online
-bly veilig aanlyn
+Bly veilig aanlyn
 
 
 ;Enjoy new features
-geniet nuwe funksies
+Geniet nuwe funksies
 
 
 ;URGENT!
@@ -63,30 +63,29 @@ U weergawe van Firefox is nie meer beveilig teen aanvalle aanlyn nie.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Hierdie is die laaste herinnering voordat Firefox outomaties na die jongste weergawe opgegradeer sal word
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ondersteun nie meer u bedryfstelselweergawe nie en gaan vatbaar wees vir aanvalle aanlyn.
 
 
 ;We recommend:
-We recommend:
+Ons aanbevelings:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Gradeer u <a %s>bedryfstelsel</a> op
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Laai 'n versoenbare blaaier af
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
-
+Installeer 'n gratis bywerking vir u <a %s>bedryfstelsel</a>
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+U sal nog een keer ingelig word voordat dit outomaties bygewerk word.
 
 
