--- a/af/upgradedialog.lang
+++ b/af/upgradedialog.lang
@@ -27,7 +27,7 @@ Daar’s 'n nuwe weergawe van Firefox wat beter beskerming bied teen aanvalle aa
 
 
 ;Get the upgrade — it’s fast & free!
-Kry die bywerking - dis vinnig en gratis!
+Kry die bywerking — dis vinnig en gratis!
 
 
 ;get the latest in security
@@ -63,7 +63,7 @@ U weergawe van Firefox is nie meer beveilig teen aanvalle aanlyn nie.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-Hierdie is die laaste herinnering voordat Firefox outomaties na die jongste weergawe opgegradeer sal word
+Hierdie is die laaste herinnering voordat Firefox outomaties na die jongste weergawe bygewerk sal word
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
