Restore string that changed somewhere
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104488 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/upgradedialog.lang
+++ b/af/upgradedialog.lang
@@ -26,8 +26,8 @@ Beter as ooit
 Daar’s 'n nuwe weergawe van Firefox wat beter beskerming bied teen aanvalle aanlyn.
 
 
-;Get the upgrade — it’s fast & free!
-Kry die bywerking — dis vinnig en gratis!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Kry die bywerking</a> — dis vinnig en gratis!
 
 
 ;get the latest in security
