--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -122,7 +122,7 @@ Invita a tus amigos a que vean las características que tendrá Firefox en el fu
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rápido, rápido, rápido. <a %s>Firefox para Android acaba de ser actualizado</a>. Ayúdanos a difundirlo.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
