l10n: mk, upgrade dialog strings, translation by Novica Nakov
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104490 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mk/upgradedialog.lang
+++ b/mk/upgradedialog.lang
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Има нова верзија на Firefox која подобро може да Ве заштити од напади на интернет.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,27 +31,27 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+добијте најдобра безбедност
 
 
 ;experience faster performance
-добијте побрзи перформанси
+искусете побрзи перформанси
 
 
 ;enjoy greater customization
-enjoy greater customization
+уживајте со големи прилагодувања
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Вашата верзија на Firefox наскоро ќе биде ранлива од напади на интернет.
 
 
 ;Stay safe online
-останете безбедни на мрежата
+Останете безбедни на мрежата
 
 
 ;Enjoy new features
-уживајте во новите можности
+Уживајте во новите можности
 
 
 ;URGENT!
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Ова е последно потсетување пред прелистувачот автоматски да се надгради до најновата верзија
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox повеќе на ја поддржува верзијата на Вашиот оперативен систем и ќе биде ранлив на напади.
 
 
 ;We recommend:
-We recommend:
+Препорачуваме:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Да го надградите Вашиот <a %s>оперативен систем</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Да преземете компатибилен прелистувач
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Да го надградите Вашиот <a %s>оперативен систем</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Ќе добиете уште едно известување пред да продолжи автоматскта надградба.
 
 
