Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104493 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -114,7 +114,7 @@ A Firefox megtalálható a legtöbb közösségi oldalon. Csatlakozzon hozzánk.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Hírlevelek <span>kezelése</span>
 
 
 ;Subscribe
@@ -126,11 +126,11 @@ Lemondás
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Jelölje be, ha le szeretne iratkozni az összes Mozilla hírlevélről
 
 
 ;Remove me from all Mozilla emails
-Leiratkozás az összes Mozilla e-mailről
+Leiratkozás az összes Mozilla hírlevélről
 
 
 ;Save Preferences
