Revert changes made with rev.104400 (Update for the upgradedialog lang file - bug 745594) to be in compliance with bug 746129- el locale.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104494 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -34,7 +34,7 @@
 Βάλτε ό,τι πιο σύγχρονο στην ασφάλεια
 
 
-;Experience faster performance
+;experience faster performance
 Δείτε καλύτερες επιδόσεις
 
 
@@ -88,8 +88,5 @@
 
 ;You will be prompted once more before being automatically updated.
 Θα ειδοποιηθείτε άλλη μια φορά πριν γίνει αυτόματη αναβάθμιση.
-
-;Learn more
-Μάθετε περισσότερα
 
 
